--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- คลิป MP4 -->
         <div class="video-container">
             <video id="videoPlayer" width="100%" height="180" controls autoplay>
-                <source src="c:\Users\zenig\Desktop\song\คลงเธอ - NONT TANONT [ เนอเพลง ].mp4" type="video/mp4">
+                <source src="https://drive.google.com/file/d/1iufQfVy_QqLC8rFOQc_LAfXxKy1xQTHs/view?usp=drive_link" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
