--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 
         <!-- คลิป MP4 -->
         <div class="video-container">
-            <video id="videoPlayer" width="100%" height="180" controls autoplay>
-                <source src="https://drive.google.com/file/d/1iufQfVy_QqLC8rFOQc_LAfXxKy1xQTHs/view?usp=drive_link" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+            <video controls>
+    <source src="https://drive.google.com/file/d/1iufQfVy_QqLC8rFOQc_LAfXxKy1xQTHs/view?usp=drive_link" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
+
         </div>
     </div>
 
